--- a/Tkinter/gui.ipynb
+++ b/Tkinter/gui.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "box=Tk()\n",
     "box.geometry('300x300')\n",
     "myc=Canvas(box,width=200,height=200,bg='yellow')\n",
-    "myarc=myc.create_arc(10,10,150,110,start=0,extent=300,fill='red',outline='green',width=10)\n",
+    "myarc=myc.create_arc(100,10,150,110,start=90,extent=359,fill='red',outline='green',width=1)\n",
     "myc.place(relx=.1,rely=.1)\n",
     "mainloop()"
    ]
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,14 +260,14 @@
     "\n",
     "rb2 = Radiobutton(myw, text=\"Female\", variable=myvar, value=2, width=15, anchor='w', command=myf)\n",
     "rb2.grid(row=2)\n",
-    "rb2.select()\n",
+    "# rb2.select()\n",
     "\n",
     "mainloop()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,13 +284,6 @@
     "close_button.pack()\n",
     "box.mainloop()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
