draft-socketand multithreading

--- a/file/file.ipynb
+++ b/file/file.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'t line \\nthis is second line \\nthis is third line\\nthis is fourth line'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# open and close a file\n",
     "# create a .txt file and read some of the characters and after that read -all the content of the file\n",
@@ -30,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +29,7 @@
       "this is first line \n",
       "this is second line \n",
       "this is third line\n",
-      "this is fourth line"
+      "this is fourth linethis is the appended this is the appended this is the appended this is the appended This is the appended content.This is the appended content.this is the appended this is the appended "
      ]
     }
    ],
@@ -65,10 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# wap to display entire content of file using loops\n",
+    "\n",
+    "file=open(\"./txtfile.txt\")\n",
+    "\n",
+    "print(type(file.readlines()))\n",
+    "file.close()"
+   ]
   },
   {
    "cell_type": "code",
